[gd_scene load_steps=13 format=3 uid="uid://bpmlfhv30o08l"]

[ext_resource type="Script" path="res://Scripts/UI/TopPanel/top_ui.gd" id="2_fpnkx"]
[ext_resource type="Script" path="res://Scripts/Misc/OnlineLinks.gd" id="3_tep3f"]
[ext_resource type="Script" path="res://Scripts/UI/TopPanel/TopBarInput.gd" id="4_r6evh"]
[ext_resource type="Texture2D" uid="uid://bq4tg8ia2crwh" path="res://UI/Assets/LinksButtonImages/GithubLogo.png" id="6_0f73e"]
[ext_resource type="Texture2D" uid="uid://whhnbdvw3i1j" path="res://UI/Assets/LinksButtonImages/TumblrLogo.png" id="7_ja8k8"]
[ext_resource type="Texture2D" uid="uid://kmyr2ks7oil4" path="res://UI/Assets/LinksButtonImages/RedditLogo.png" id="8_3p41m"]
[ext_resource type="Texture2D" uid="uid://dt530lalergk0" path="res://DemoModels/Icons/BasicIcon.png" id="9_hrvuv"]
[ext_resource type="Texture2D" uid="uid://bhidrbb01hfmq" path="res://DemoModels/Icons/BGIcon.png" id="10_apeyf"]
[ext_resource type="Texture2D" uid="uid://fmhwpxa4hlo7" path="res://DemoModels/Icons/NormalIcon.png" id="11_bgxcq"]
[ext_resource type="Texture2D" uid="uid://bjxmdyue5pp2x" path="res://DemoModels/Icons/FollowMouseIcon.png" id="12_bmktp"]
[ext_resource type="Texture2D" uid="uid://dm7ppdlhye1ji" path="res://DemoModels/Icons/AssetIcon.png" id="13_f2y74"]
[ext_resource type="PackedScene" uid="uid://clxl1gighe78l" path="res://UI/BetterSlider/better_slider.tscn" id="25_715by"]

[node name="TopUI" type="Control"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("2_fpnkx")

[node name="OnlineLinks" type="Node" parent="."]
script = ExtResource("3_tep3f")

[node name="TopBarInput" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_r6evh")

[node name="TopBar" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_bottom = 28.0

[node name="HBox" type="HBoxContainer" parent="TopBar"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="FilesButton" type="MenuButton" parent="TopBar/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "   Files "
item_count = 9
popup/item_0/text = "New"
popup/item_1/text = "Open"
popup/item_1/id = 1
popup/item_2/text = "Save"
popup/item_2/id = 8
popup/item_3/text = "Save As"
popup/item_3/id = 3
popup/item_4/text = "Add Images"
popup/item_4/id = 4
popup/item_5/text = "Add Appendage Based Image"
popup/item_5/id = 6
popup/item_6/text = "Export Model Parts"
popup/item_6/id = 9
popup/item_7/text = "Demo Model"
popup/item_7/id = 5
popup/item_8/text = "LipSync Configuration"
popup/item_8/id = 10

[node name="ModeButton" type="MenuButton" parent="TopBar/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = " Mode "
item_count = 3
popup/item_0/text = "Editor"
popup/item_1/text = "PNGTube"
popup/item_1/id = 1
popup/item_2/text = "Script"
popup/item_2/id = 2
popup/item_2/disabled = true

[node name="BGButton" type="MenuButton" parent="TopBar/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = " BG Color "
item_count = 7
popup/item_0/text = "Red"
popup/item_1/text = "Blue"
popup/item_1/id = 1
popup/item_2/text = "Green"
popup/item_2/id = 2
popup/item_3/text = "Magenta"
popup/item_3/id = 3
popup/item_4/text = "Transparent"
popup/item_4/id = 4
popup/item_5/text = "Gray"
popup/item_5/id = 5
popup/item_6/text = "Custom"
popup/item_6/id = 6

[node name="BounceControlButton" type="MenuButton" parent="TopBar/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = " Bounce "

[node name="InputsButton" type="MenuButton" parent="TopBar/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = " Settings "

[node name="CollabButton" type="MenuButton" parent="TopBar/HBox"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(79, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Collab
"

[node name="WindowButton" type="MenuButton" parent="TopBar/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = " Window "
item_count = 2
popup/item_0/text = "Toggle Borders"
popup/item_1/text = "Save Window (position, size, etc..)"
popup/item_1/id = 1

[node name="AboutButton" type="MenuButton" parent="TopBar/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = " About "
item_count = 3
popup/item_0/text = "Credits"
popup/item_1/text = "About"
popup/item_1/id = 1
popup/item_2/text = "Mini Tutorial (Wip)"
popup/item_2/id = 2

[node name="PreviewModeCheck" type="CheckBox" parent="TopBar/HBox"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(79, 0)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Turns your model Static.
Uncheck to preview your model's movement. 
This automatically gets unchecked when changing modes.
"
theme_override_font_sizes/font_size = 14
text = "Pause Movement   "
flat = true

[node name="HideUIButton" type="CheckBox" parent="TopBar/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(79, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
button_pressed = true
text = "Show UI"
flat = true

[node name="DeselectButton" type="Button" parent="TopBar/HBox"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(79, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.74558, 0.74558, 0.74558, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 14
text = "Deselect"
flat = true
icon_alignment = 1

[node name="WindowSize" type="Label" parent="TopBar/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(184, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_font_sizes/font_size = 11
text = "Window Size (0,0)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AboutPopUp" type="PopupPanel" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
initial_position = 2
size = Vector2i(400, 251)
wrap_controls = false

[node name="VBoxContainer" type="VBoxContainer" parent="AboutPopUp"]
offset_left = 4.0
offset_top = 4.0
offset_right = 396.0
offset_bottom = 247.0

[node name="CreditLabel" type="Label" parent="AboutPopUp/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PNGTuber Remix by TheMime (MudkipWorld)
Original PNGTuber+ Code by kaiakairos. Better UI by LeoRson.

V1.3.4"
horizontal_alignment = 1
autowrap_mode = 2

[node name="GridContainer" type="GridContainer" parent="AboutPopUp/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="SourceLabel" type="Label" parent="AboutPopUp/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Source code : "

[node name="GitHubButton" type="TextureButton" parent="AboutPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("6_0f73e")
texture_pressed = ExtResource("6_0f73e")
texture_hover = ExtResource("6_0f73e")
texture_disabled = ExtResource("6_0f73e")
ignore_texture_size = true
stretch_mode = 0

[node name="EmptySpace" type="Control" parent="AboutPopUp/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="SocialLabel" type="Label" parent="AboutPopUp/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Social : "

[node name="TumblrButton" type="TextureButton" parent="AboutPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("7_ja8k8")
texture_pressed = ExtResource("7_ja8k8")
texture_hover = ExtResource("7_ja8k8")
texture_disabled = ExtResource("7_ja8k8")
ignore_texture_size = true
stretch_mode = 0

[node name="RedditButton" type="TextureButton" parent="AboutPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("8_3p41m")
texture_pressed = ExtResource("8_3p41m")
texture_hover = ExtResource("8_3p41m")
texture_disabled = ExtResource("8_3p41m")
ignore_texture_size = true
stretch_mode = 0

[node name="TempPopUp" type="PopupPanel" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
initial_position = 2
size = Vector2i(571, 147)

[node name="VBoxContainer" type="VBoxContainer" parent="TempPopUp"]
offset_left = 4.0
offset_top = 4.0
offset_right = 567.0
offset_bottom = 143.0

[node name="TempLabel" type="Label" parent="TempPopUp/VBoxContainer"]
layout_mode = 2
text = "Choose Demo :"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="TempPopUp/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="BasicTempButton" type="Button" parent="TempPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Basic Demo"
icon = ExtResource("9_hrvuv")
expand_icon = true

[node name="BGTempButton" type="Button" parent="TempPopUp/VBoxContainer/GridContainer"]
visible = false
custom_minimum_size = Vector2(320, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Model With Background Demo"
icon = ExtResource("10_apeyf")
expand_icon = true

[node name="NormalmTempButton" type="Button" parent="TempPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(220, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "NormalMap Demo"
icon = ExtResource("11_bgxcq")
expand_icon = true

[node name="FollowMouseTempButton" type="Button" parent="TempPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Follow Mouse Demo"
icon = ExtResource("12_bmktp")
expand_icon = true

[node name="AssetTempButton" type="Button" parent="TempPopUp/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/icon_max_width = 37
text = "Asset Model Demo"
icon = ExtResource("13_f2y74")

[node name="CreditPopUp" type="PopupPanel" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
initial_position = 2
size = Vector2i(435, 207)

[node name="VBoxContainer" type="VBoxContainer" parent="CreditPopUp"]
offset_left = 4.0
offset_top = 4.0
offset_right = 431.0
offset_bottom = 203.0

[node name="AboutLabel" type="Label" parent="CreditPopUp/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "About
"
horizontal_alignment = 1

[node name="Label" type="Label" parent="CreditPopUp/VBoxContainer"]
layout_mode = 2
text = "This is a PNGTubing App made to be as lightweight 
and easy to use as possible.
This app is based off PNGTuber+.
Main goal is to implement new features as fix bugs 
from the original software and improve existing ones."

[node name="BounceControlPopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
initial_position = 2
size = Vector2i(320, 397)
unresizable = false
borderless = false

[node name="GridContainer" type="GridContainer" parent="BounceControlPopup"]
custom_minimum_size = Vector2(300, 0)
offset_left = 4.0
offset_top = 4.0
offset_right = 316.0
offset_bottom = 393.0

[node name="BounceAmount" type="Label" parent="BounceControlPopup/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Affects Model Bouncing"
mouse_filter = 1
text = "Bounce Amount : "

[node name="BounceAmountSlider" parent="BounceControlPopup/GridContainer" instance=ExtResource("25_715by")]
unique_name_in_owner = true
layout_mode = 2
max_value = 3000.0
step = 1.0
ui_type = 3

[node name="GravityAmount" type="Label" parent="BounceControlPopup/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bounce Gravity : "

[node name="GravityAmountSlider" parent="BounceControlPopup/GridContainer" instance=ExtResource("25_715by")]
unique_name_in_owner = true
layout_mode = 2
max_value = 3000.0
step = 1.0
ui_type = 3

[node name="HSeparator" type="HSeparator" parent="BounceControlPopup/GridContainer"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="BounceControlPopup/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="XFreqWobbleLabel" type="Label" parent="BounceControlPopup/GridContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Affects the Wobbling"
mouse_filter = 1
text = "X-Frequency Wobble :"

[node name="XFreqWobbleSlider" type="HSlider" parent="BounceControlPopup/GridContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
step = 0.01

[node name="VBox2" type="VBoxContainer" parent="BounceControlPopup/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="XAmpWobbleLabel" type="Label" parent="BounceControlPopup/GridContainer/VBox2"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Affects the Wobbling"
mouse_filter = 1
text = "X-Amplitude Wobble :"

[node name="XAmpWobbleSlider" type="HSlider" parent="BounceControlPopup/GridContainer/VBox2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
step = 0.01

[node name="HSeparator2" type="HSeparator" parent="BounceControlPopup/GridContainer"]
layout_mode = 2

[node name="VBox3" type="VBoxContainer" parent="BounceControlPopup/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="YFreqWobbleLabel" type="Label" parent="BounceControlPopup/GridContainer/VBox3"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Affects the Wobbling and Squishing"
mouse_filter = 1
text = "Y-Frequency Wobble :"

[node name="YFreqWobbleSlider" type="HSlider" parent="BounceControlPopup/GridContainer/VBox3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
step = 0.01

[node name="VBox4" type="VBoxContainer" parent="BounceControlPopup/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="YAmpWobbleLabel" type="Label" parent="BounceControlPopup/GridContainer/VBox4"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Affects the Wobbling and Squishing"
mouse_filter = 1
text = "Y-Frequency Wobble :"

[node name="YAmpWobbleSlider" type="HSlider" parent="BounceControlPopup/GridContainer/VBox4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
step = 0.01

[node name="HSeparator3" type="HSeparator" parent="BounceControlPopup/GridContainer"]
layout_mode = 2

[node name="BounceStateCheck" type="CheckBox" parent="BounceControlPopup/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Bounce when changing states    "

[node name="Background" type="PopupPanel" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
initial_position = 2
size = Vector2i(284, 416)

[node name="BGColorPicker" type="ColorPicker" parent="Background"]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 4.0
offset_right = 280.0
offset_bottom = 412.0
mouse_filter = 0
edit_alpha = false
color_mode = 1
picker_shape = 1
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
presets_visible = false

[connection signal="pressed" from="TopBar/HBox/BounceControlButton" to="TopBarInput" method="_on_bounce_control_button_pressed"]
[connection signal="pressed" from="TopBar/HBox/InputsButton" to="TopBarInput" method="_on_inputs_button_pressed"]
[connection signal="toggled" from="TopBar/HBox/PreviewModeCheck" to="TopBarInput" method="_on_preview_mode_check_toggled"]
[connection signal="toggled" from="TopBar/HBox/HideUIButton" to="TopBarInput" method="_on_hide_ui_button_toggled"]
[connection signal="pressed" from="TopBar/HBox/DeselectButton" to="TopBarInput" method="_on_deselect_button_pressed"]
[connection signal="pressed" from="AboutPopUp/VBoxContainer/GridContainer/GitHubButton" to="OnlineLinks" method="_on_git_hub_button_pressed"]
[connection signal="pressed" from="AboutPopUp/VBoxContainer/GridContainer/TumblrButton" to="OnlineLinks" method="_on_tumblr_button_pressed"]
[connection signal="pressed" from="AboutPopUp/VBoxContainer/GridContainer/RedditButton" to="OnlineLinks" method="_on_reddit_button_pressed"]
[connection signal="pressed" from="TempPopUp/VBoxContainer/GridContainer/BasicTempButton" to="TopBarInput" method="_on_basic_temp_button_pressed"]
[connection signal="pressed" from="TempPopUp/VBoxContainer/GridContainer/BGTempButton" to="TopBarInput" method="_on_bg_temp_button_pressed"]
[connection signal="pressed" from="TempPopUp/VBoxContainer/GridContainer/NormalmTempButton" to="TopBarInput" method="_on_normalm_temp_button_pressed"]
[connection signal="pressed" from="TempPopUp/VBoxContainer/GridContainer/FollowMouseTempButton" to="TopBarInput" method="_on_follow_mouse_temp_button_pressed"]
[connection signal="pressed" from="TempPopUp/VBoxContainer/GridContainer/AssetTempButton" to="TopBarInput" method="_on_asset_temp_button_pressed"]
[connection signal="value_changed" from="BounceControlPopup/GridContainer/VBox/XFreqWobbleSlider" to="TopBarInput" method="_on_x_freq_wobble_slider_value_changed"]
[connection signal="value_changed" from="BounceControlPopup/GridContainer/VBox2/XAmpWobbleSlider" to="TopBarInput" method="_on_x_amp_wobble_slider_value_changed"]
[connection signal="value_changed" from="BounceControlPopup/GridContainer/VBox3/YFreqWobbleSlider" to="TopBarInput" method="_on_y_freq_wobble_slider_value_changed"]
[connection signal="value_changed" from="BounceControlPopup/GridContainer/VBox4/YAmpWobbleSlider" to="TopBarInput" method="_on_y_amp_wobble_slider_value_changed"]
[connection signal="toggled" from="BounceControlPopup/GridContainer/BounceStateCheck" to="TopBarInput" method="_on_bounce_state_check_toggled"]
[connection signal="focus_entered" from="Background" to="TopBarInput" method="_on_background_focus_entered"]
[connection signal="focus_exited" from="Background" to="TopBarInput" method="_on_background_focus_exited"]
[connection signal="color_changed" from="Background/BGColorPicker" to="TopBarInput" method="_on_color_picker_color_changed"]
